style.css
@import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@200;300;400;500;600&display=swap');
/* Set core root defaults */
html {
  scroll-behavior: smooth;
  scrollbar-width: thin;
  scrollbar-color: #0074d5 #000;
}
*,
::after,
::before {
  box-sizing: border-box;
}
*,
*::after,
*::before {
  margin: 0;
}
body {
  min-height: 100vh;

  font-family: 'Encode Sans', sans-serif;
  text-rendering: optimizeSpeed;
  line-height: calc(1em + 0.5rem);
  font-weight: 300;
  user-select: none;
  overflow: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #000;
  color: #fff;
  animation: fadeInAnimation ease-out 3s 1 forwards;
}
@keyframes fadeInAnimation {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

body::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}
body::-webkit-scrollbar-track {
  background: #3d4451;
}
body::-webkit-scrollbar-thumb {
  background: #8b92a5;
  border-radius: 10px;
}
body::-webkit-scrollbar-thumb:hover {
  background: #6acae4;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul {
  list-style: none;
  padding: 0;
}
/* Make images easier to work with */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
input,
button,
textarea,
select {
  font: inherit;
}

a {
  text-decoration: none;
  color: #fff;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  transition: all 0.3s ease;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 300;
  color: #fff;
  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.6);
}

.main-header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100px;
  background-color: transparent;
  z-index: 100;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 2rem;
  transition: all 0.3s ease;
  /* box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.6); */
}

.logo {
  width: clamp(200px, 20vw, 300px);
  height: auto;
}

.logo img {
  display: block;
  width: 100%;
  height: auto;
}

.desktop-main-menu {
  margin-right: 3rem;
}

.desktop-main-menu ul {
  display: flex;
  align-items: center;
  justify-content: center;
}

.desktop-main-menu ul li {
  position: relative;
  margin-right: 1.3rem;
  padding-bottom: 2px;
}

.desktop-main-menu ul li a {
  font-size: clamp(0.6rem, 1.2vw, 1rem);
}

.desktop-main-menu ul li a::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 1px;
  background-color: #fff;
  transform: scaleX(0);
  transform-origin: right center;
  transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
}

.desktop-main-menu ul li a:hover::after {
  transform: scaleX(1);
  transform-origin: left center;
  transition-duration: 0.4s;
}

/* Background Images */
section {
  position: relative;
  height: 100vh;
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  text-transform: uppercase;
}

.section-inner {
  position: absolute;
  bottom: 200px;
  left: 150px;
  max-width: 560px;
}
.section-inner h4 {
  font-size: 1.4rem;
  font-weight: 300;
  letter-spacing: 0.1rem;
  margin-bottom: 2rem;
  animation: fadeInUp 0.5s ease-out 0.3s forwards;
  animation-fill-mode: both; /* Stops initial show */
}
.section-inner h2 {
  font-size: clamp(2.5rem, 5vw, 4rem);
  text-transform: uppercase;
  letter-spacing: 0.2rem;
  font-weight: 600;
  margin-bottom: 2rem;
  animation: fadeInUp 0.5s ease-out 0.5s forwards;
  animation-fill-mode: both; /* Stops initial show */
}

.section-inner a {
  animation: fadeInUp 0.5s ease-out 0.6s forwards;
  animation-fill-mode: both; /* Stops initial show */
}
@keyframes fadeInUp {
  0% {
    opacity: 0;
    transform: translateY(10rem);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}
.section-a {
  background-image: url('./images/section-a.webp');
}
.section-b {
  background-image: url('./images/section-b.webp');
}
.section-c {
  background-image: url('./images/section-c.webp');
}
.section-d {
  background-image: url('./images/section-d.webp');
}
.section-e {
  background-image: url('./images/section-e.webp');
}
.section-f {
  background-image: url('./images/section-f.webp');
}

.btn {
  position: relative;
  display: inline-block;
  padding: 0.9rem 2.6rem;
  font-size: 1.2rem;
  font-weight: 300;
  letter-spacing: 0.2rem;
  text-align: center;
  border: 2px solid #fff;
  border-radius: 50px;
  overflow: hidden;
  transition: all 0.3s ease;
  cursor: pointer;
}
.btn:hover {
  color: #000;
  transform: translateY(0);
}
.btn .hover {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 50px;
  background-color: #fff;
  z-index: -1;
  transform: translateY(100%);
  transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
}

.btn:hover .hover {
  transform: translateY(0);
}

.scroll-arrow {
  position: absolute;
  bottom: 50px;
  left: 50%;
  transform: translateX(-50%);
  animation: fadeBounce 3s infinite;
}
@keyframes fadeBounce {
  0%,
  20%,
  50%,
  80%,
  100% {
    opacity: 0;
    transform: translateY(-20px);
  }

  40% {
    opacity: 1;
    transform: translateY(0);
  }
}

/* Footer */

footer {
  position: relative;
  padding: 2rem 1rem;
}
footer ul {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
footer ul li {
  margin-right: 2rem;
  color: #aaa;
  font-size: 0.8rem;
  line-height: 2.5;
}

footer ul li a {
  color: #aaa;
  transition: all 0.3s ease;
}
footer ul li a:hover {
  color: #fff;
}

/* Hamburger Icon */
.hamburger {
  position: fixed;
  top: 3rem;
  right: 2rem;
  width: 30px;
  height: 30px;
  z-index: 100;
  cursor: pointer;
  background: none;
  border: none;
}

.hamburger-top,
.hamburger-middle,
.hamburger-bottom {
  position: absolute;
  width: 20px;
  height: 2px;
  top: 0;
  left: 0;
  background-color: #fff;
  transition: all 0.4s ease;
}

.hamburger-middle {
  transform: translateY(5px);
}

.hamburger-bottom {
  transform: translateY(10px);
}
/* Hamburger transition */
.open {
  transform: rotate(45deg);
}

.open .hamburger-top {
  transform: translateY(10px) rotate(0deg);
}

.open .hamburger-middle {
  opacity: 0;
}

.open .hamburger-bottom {
  transform: translateY(10px) rotate(90deg);
}

/* Overlay */

.overlay-show {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
  z-index: 99;
  transition: all 0.4s ease-out;
}
/* Stop body scroll */
.stop-scroll {
  overflow: hidden;
}
/* Hide mobile main menu */
.mobile-only {
  display: none;
}
/* Mobile Menu */
.mobile-main-menu {
  position: fixed;
  top: 0;
  right: 0;
  width: 22rem;
  height: 100%;
  background-color: #000;
  z-index: 100;
  display: flex;
  justify-content: center;
  align-items: center;
  transform: translateX(100%);
  transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
}

/* Bring menu from right */
.show-menu {
  transform: translateX(0);
}
.mobile-main-menu ul {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: center;
  padding: 3rem;
  height: 100%;
}

.mobile-main-menu ul li {
  margin-bottom: 2rem;
  font-size: 1.2rem;
  font-weight: 300;
  letter-spacing: 0.2rem;
  text-transform: uppercase;
  border-bottom: 1px dotted rgb(174, 174, 174);
  width: 100%;
  text-align: right;
  padding-bottom: 0.5rem;
  transition: all 0.3s ease;
}

.mobile-main-menu ul li a {
  color: rgb(212, 212, 212);
  transition: all 0.3s ease;
}
.mobile-main-menu ul li a:hover {
  color: #fff;
}
/* Inner pages */
.bg-falcon-9 {
  background-image: url('./images/falcon-9.webp');
  z-index: -1;
}
.bg-falcon-heavy {
  background-image: url('./images/falcon-heavy.webp');
  z-index: -1;
}
.bg-dragon {
  background-image: url('./images/dragon.webp');
  z-index: -1;
}
.bg-starship {
  background-image: url('./images/starship.webp');
  z-index: -1;
}

.section-animate {
  animation: fadeIn 2s ease-out;
}
@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
.section-inner-center {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  width: 80%;
}

.section-inner-center h3 {
  font-size: clamp(3rem, 5vw, 4.6rem);
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 0.2rem;
  color: #fff;
  margin-bottom: 3rem;
  animation: fadeInUp 0.5s ease-out;
}
.section-inner-center p {
  font-size: clamp(1rem, 1.4vw, 1.2rem);
  font-weight: 400;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: #fff;
  animation: fadeInUp 0.5s ease-out 0.2s;
  animation-fill-mode: both;
}

/* Stats */
.stats {
  max-width: 960px;
  padding-top: 4rem;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
  text-align: center;
  text-transform: uppercase;
  z-index: 200;
}

.stats div span {
  font-size: clamp(5rem, 12vw, 8rem);
}

.stats div h4 {
  margin-top: 2rem;
  font-size: clamp(1rem, 1.4vw, 1.2rem);
  font-weight: 300;
}
/* Media Queries */

@media (max-width: 960px) {
  /* Hide desktop menu */
  .desktop-main-menu {
    display: none;
  }
  .logo {
    margin: auto;
  }
  /* Show main mobile items */
  .mobile-only {
    display: block;
  }
  .stats div {
    padding: 1rem 2rem;
  }
  .stats div h4 {
    overflow-wrap: break-word;
    hyphens: auto;
  }
}
@media (max-width: 600px) {
  .section-inner {
    bottom: 75px;
    left: 20px;
  }

  footer ul li:first-child {
    position: absolute;
    padding-bottom: 2rem;
    top: 40px;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  footer ul li {
    margin-right: 15px;
  }

  /* Stats */

  .stats div {
    margin-bottom: 1.6rem;
  }
}

